--- a/modules/srv-mod-handler-base/Cargo.toml
+++ b/modules/srv-mod-handler-base/Cargo.toml
@@ -4,9 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tracing = "0.1"
-anyhow = "1.0.86"
-serde = { version = "1.0.203", features = ["derive"] }
+tracing = "0.1.40"
+serde = { version = "1.0.210", features = ["derive"] }
 rs2-crypt = { path = "../../libs/rs2-crypt", features = [
     "sha3",
     "hex-encoding",
@@ -14,16 +13,17 @@ rs2-crypt = { path = "../../libs/rs2-crypt", features = [
     "base64-encoding",
     "asymmetric-encryption",
 ] }
-bytes = "1.6.0"
+bytes = "1.7.2"
 srv-mod-config = { path = "../srv-mod-config" }
 rs2-utils = { path = "../../libs/rs2-utils", features = ["bytes"] }
-axum = "0.7.5"
-srv-mod-database = { path = "../srv-mod-database" }
+axum = "0.7.7"
 rs2-communication-protocol = { path = "../../libs/rs2-communication-protocol" }
 mod-protocol-json = { path = "../mod-protocol-json" }
 chrono = "0.4.38"
-tokio = { version = "1.37.0", features = ["full"] }
-serde_json = "1.0.117"
+tokio = { version = "1.40.0", features = ["full"] }
+serde_json = "1.0.128"
+srv-mod-entity = { path = "../srv-mod-entity" }
+humantime = "2.1.0"
 
 [dev-dependencies]
 serial_test = "3.1.1"
