fix: compilation bugs

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -36,5 +36,6 @@ srv-mod-handler-http = { path = "../modules/srv-mod-handler-http" }
 kageshirei-communication-protocol = { path = "../libs/kageshirei-communication-protocol" }
 srv-mod-migration = { path = "../modules/srv-mod-migration" }
 srv-mod-entity = { path = "../modules/srv-mod-entity" }
+chrono = "0.4.38"
 
 [features]
