--- a/modules/srv-mod-operator-api/Cargo.toml
+++ b/modules/srv-mod-operator-api/Cargo.toml
@@ -36,3 +36,4 @@ futures = "0.3.31"
 futures-util = "0.3.31"
 tokio-stream = { version = "0.1.16", features = ["sync"] }
 srv-mod-entity = { path = "../srv-mod-entity" }
+srv-mod-migration = { path = "../srv-mod-migration" }
