--- a/libs/kageshirei-win32/Cargo.toml
+++ b/libs/kageshirei-win32/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 [dependencies]
 kageshirei-indirect-syscall = { path = "../kageshirei-indirect-syscall"}
 spin = "0.9"
+
+[lints]
+workspace = true
