--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -37,3 +37,6 @@ kageshirei-communication-protocol = { path = "../libs/kageshirei-communication-p
 srv-mod-migration = { path = "../modules/srv-mod-migration" }
 srv-mod-entity = { path = "../modules/srv-mod-entity" }
 chrono = "0.4.38"
+
+[lints]
+workspace = true
