--- a/command-and-control-gui/src-tauri/Cargo.toml
+++ b/command-and-control-gui/src-tauri/Cargo.toml
@@ -25,3 +25,6 @@ tauri = { version = "2.0.3", features = [] }
 # If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
 # DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
+
+[lints]
+workspace = true
