--- a/modules/mod-agentcore/Cargo.toml
+++ b/modules/mod-agentcore/Cargo.toml
@@ -8,6 +8,8 @@ mod-hhtgates = {path = "../../modules/mod-hhtgates"}
 kageshirei-win32 = {path = "../../libs/kageshirei-win32" }
 spin = "0.9"
 
-
 [dev-dependencies]
 libc-print = "0.1.23"
+
+[lints]
+workspace = true
