--- a/modules/mod-nostd-nt-runtime/Cargo.toml
+++ b/modules/mod-nostd-nt-runtime/Cargo.toml
@@ -9,8 +9,10 @@ mod-nostd = { path = "../../modules/mod-nostd" }
 futures = "0.3.30"
 spin = "0.9"
 
-
 [dev-dependencies]
 libc-print = "0.1.23"
 kageshirei-communication-protocol = { path = "../../libs/kageshirei-communication-protocol" }
 mod-win32 = { path = "../../modules/mod-win32" }
+
+[lints]
+workspace = true
