--- a/modules/mod-nt-heapalloc/Cargo.toml
+++ b/modules/mod-nt-heapalloc/Cargo.toml
@@ -11,7 +11,8 @@ mod-hhtgates = {path = "../mod-hhtgates" }
 mod-agentcore = {path = "../mod-agentcore" }
 spin = "0.9"
 
-
-
 [dev-dependencies]
 libc-print = "0.1.23"
+
+[lints]
+workspace = true
