--- a/modules/mod-protocol-json/Cargo.toml
+++ b/modules/mod-protocol-json/Cargo.toml
@@ -28,3 +28,6 @@ bytes = "1.7.2"
 tokio = { version = "1.40.0", features = ["full"] }
 axum = "0.7.7"
 tokio-util = "0.7.12"
+
+[lints]
+workspace = true
