--- a/modules/mod-protocol-winhttp/Cargo.toml
+++ b/modules/mod-protocol-winhttp/Cargo.toml
@@ -18,3 +18,6 @@ tokio = { version = "1.37.0", features = ["full"] }
 axum = "0.7.5"
 tokio-util = "0.7.11"
 libc-print = "0.1.23"
+
+[lints]
+workspace = true
