--- a/modules/mod-win32/Cargo.toml
+++ b/modules/mod-win32/Cargo.toml
@@ -8,6 +8,8 @@ kageshirei-win32 = {path = "../../libs/kageshirei-win32" }
 mod-agentcore = {path = "../../modules/mod-agentcore"}
 libc-print = "0.1.23"
 
-
 [dev-dependencies]
 chrono = "0.4"
+
+[lints]
+workspace = true
