--- a/modules/srv-mod-entity/Cargo.toml
+++ b/modules/srv-mod-entity/Cargo.toml
@@ -11,3 +11,6 @@ cuid2 = "0.1.3"
 kageshirei-communication-protocol = { path = "../../libs/kageshirei-communication-protocol", features = ["server"] }
 humantime = "2.1.0"
 serde_json = "1.0.128"
+
+[lints]
+workspace = true
