--- a/Cargo.toml
+++ b/Cargo.toml
@@ -570,15 +570,15 @@ unreachable="deny"
 unsafe_removed_from_name="deny"
 unseparated_literal_suffix="allow"
 unsound_collection_transmute="deny"
-unused_enumerate_indexe="deny"
-unused_format_specse="deny"
-unused_io_amounte="deny"
-unused_peekablee="deny"
-unused_result_oke="deny"
-unused_roundinge="deny"
-unused_trait_namese="deny"
+unused_enumerate_index="deny"
+unused_format_specs="deny"
+unused_io_amount="deny"
+unused_peekable="deny"
+unused_result_ok="deny"
+unused_rounding="deny"
+unused_trait_names="deny"
 unused_unit="deny"
-unusual_byte_groupingse="deny"
+unusual_byte_groupings="deny"
 unwrap_in_result="allow"
 unwrap_or_default="allow"
 unwrap_used="allow"
