--- a/command-and-control-gui/src-tauri/Cargo.toml
+++ b/command-and-control-gui/src-tauri/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "kageshirei-command-and-control"
 version = "0.1.0"
+edition = "2021"
 description = "The command and control client for the KageShirei project."
 repository = ""
 default-run = "kageshirei-command-and-control"
