feat: test reworking + algorithm reduction + no_std

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,8 +105,8 @@ eq_op = "deny"
 equatable_if_let = "deny"
 err_expect = "deny"
 error_impl_error = "deny"
-exhaustive_enums = "deny"
-exhaustive_structs = "deny"
+exhaustive_enums = "allow"
+exhaustive_structs = "allow"
 exit = "deny"
 expect_fun_call = "deny"
 expect_used = "deny"
