--- a/libs/kageshirei-crypt/Cargo.toml
+++ b/libs/kageshirei-crypt/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rand = { version = "0.8.5" }
-bytes = "1.7.2"
+rand = { version = "0.8.5", features = ["alloc", "nightly", "getrandom"], default-features = false }
 argon2 = { version = "0.5.3", optional = true }
 k256 = { version = "0.13.4", features = ["ecdh", "pkcs8"], optional = true }
 sha3 = { version = "0.10.8", optional = true }
@@ -13,6 +12,9 @@ hkdf = { version = "0.12.4", optional = true }
 base16ct = { version = "0.2.0", features = ["alloc"], optional = true }
 base64ct = { version = "1.6.0", features = ["alloc"], optional = true }
 chacha20poly1305 = { version = "0.10.1", optional = true }
+
+[dev-dependencies]
+libc = "0.2.159"
 
 [features]
 default = ["argon2", "hkdf", "asymmetric-encryption", "hex-encoding", "base32-encoding", "base64-encoding", "symmetric-encryption"]
@@ -25,6 +27,7 @@ base64-encoding = ["dep:base64ct"]
 symmetric-encryption = ["xchacha20poly1305"]
 xchacha20poly1305 = ["dep:chacha20poly1305"]
 sha3 = ["dep:sha3"]
+server = []
 
 [lints]
 workspace = true
