--- a/modules/srv-mod-handler-http/Cargo.toml
+++ b/modules/srv-mod-handler-http/Cargo.toml
@@ -2,6 +2,12 @@
 name = "srv-mod-handler-http"
 version = "0.1.0"
 edition = "2021"
+categories = ["simulation"]
+keywords = ["kageshirei", "server", "module", "handler", "HTTP"]
+repository = "https://github.com/Kageshirei/KageShirei"
+license-file = "../../LICENSE"
+description = "A module for the KageShirei server that provides HTTP handlers."
+readme = "README.md"
 
 [dependencies]
 srv-mod-operator-api = { path = "../srv-mod-operator-api" }
