--- a/libs/kageshirei-communication-protocol/Cargo.toml
+++ b/libs/kageshirei-communication-protocol/Cargo.toml
@@ -2,6 +2,12 @@
 name = "kageshirei-communication-protocol"
 version = "0.1.0"
 edition = "2021"
+categories = ["simulation"]
+keywords = ["kageshirei", "agent", "library", "communication", "protocols"]
+repository = "https://github.com/Kageshirei/KageShirei"
+license-file = "../../LICENSE"
+description = "A library for the KageShirei agent that provides communication protocol related structs."
+readme = "README.md"
 
 [dependencies]
 serde = { version = "1.0.210", features = ["derive", "rc"] }
