--- a/libs/kageshirei-runtime/Cargo.toml
+++ b/libs/kageshirei-runtime/Cargo.toml
@@ -2,6 +2,12 @@
 name = "kageshirei-runtime"
 version = "0.1.0"
 edition = "2021"
+categories = ["simulation"]
+keywords = ["kageshirei", "agent", "library", "runtime"]
+repository = "https://github.com/Kageshirei/KageShirei"
+license-file = "../../LICENSE"
+description = "A library for the KageShirei agent that provides runtime basics."
+readme = "README.md"
 
 [dependencies]
 
