--- a/libs/kageshirei-utils/Cargo.toml
+++ b/libs/kageshirei-utils/Cargo.toml
@@ -2,6 +2,12 @@
 name = "kageshirei-utils"
 version = "0.1.0"
 edition = "2021"
+categories = ["simulation"]
+keywords = ["kageshirei", "agent", "library", "utility"]
+repository = "https://github.com/Kageshirei/KageShirei"
+license-file = "../../LICENSE"
+description = "A library for the KageShirei agent that provides utility functions."
+readme = "README.md"
 
 [dependencies]
 log = { version = "0.4.22", optional = true }
