--- a/modules/mod-hhtgates/Cargo.toml
+++ b/modules/mod-hhtgates/Cargo.toml
@@ -2,6 +2,12 @@
 name = "mod-hhtgates"
 version = "0.1.0"
 edition = "2021"
+categories = ["simulation"]
+keywords = ["kageshirei", "agent", "module", "gates", "windows-nt"]
+repository = "https://github.com/Kageshirei/KageShirei"
+license-file = "../../LICENSE"
+description = "A module for the KageShirei agent that provides low-level gates access."
+readme = "README.md"
 
 [dependencies]
 
