--- a/modules/mod-nostd-nt-runtime/Cargo.toml
+++ b/modules/mod-nostd-nt-runtime/Cargo.toml
@@ -2,6 +2,12 @@
 name = "mod-nostd-nt-runtime"
 version = "0.1.0"
 edition = "2021"
+categories = ["simulation"]
+keywords = ["kageshirei", "agent", "module", "runtime", "nostd"]
+repository = "https://github.com/Kageshirei/KageShirei"
+license-file = "../../LICENSE"
+description = "A module for the KageShirei agent that provides nostd runtime functionalities via windows low level calls."
+readme = "README.md"
 
 [dependencies]
 kageshirei-runtime = { path = "../../libs/kageshirei-runtime" }
