--- a/modules/mod-std-runtime/Cargo.toml
+++ b/modules/mod-std-runtime/Cargo.toml
@@ -2,6 +2,12 @@
 name = "mod-std-runtime"
 version = "0.1.0"
 edition = "2021"
+categories = ["simulation"]
+keywords = ["kageshirei", "agent", "module", "std", "runtime"]
+repository = "https://github.com/Kageshirei/KageShirei"
+license-file = "../../LICENSE"
+description = "A module for the KageShirei agent that provides std runtime functionality."
+readme = "README.md"
 
 [dependencies]
 kageshirei-communication-protocol = { path = "../../libs/kageshirei-communication-protocol" }
