--- a/modules/srv-mod-entity/Cargo.toml
+++ b/modules/srv-mod-entity/Cargo.toml
@@ -2,6 +2,12 @@
 name = "srv-mod-entity"
 version = "0.1.0"
 edition = "2021"
+categories = ["simulation"]
+keywords = ["kageshirei", "server", "module", "database", "entities"]
+repository = "https://github.com/Kageshirei/KageShirei"
+license-file = "../../LICENSE"
+description = "A module for the KageShirei server that provides database entities."
+readme = "README.md"
 
 [dependencies]
 sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
