--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -2,6 +2,12 @@
 name = "kageshirei-server"
 version = "0.1.0"
 edition = "2021"
+categories = ["simulation"]
+keywords = ["kageshirei", "server", "command-and-control"]
+repository = "https://github.com/Kageshirei/KageShirei"
+license-file = "../LICENSE"
+description = "Server component of KageShirei: a modern, highly-customizable, command and control framework for red teams."
+readme = "README.md"
 
 [profile.release]
 strip = true
