--- a/libs/kageshirei-utils/Cargo.toml
+++ b/libs/kageshirei-utils/Cargo.toml
@@ -10,10 +10,9 @@ description = "A library for the KageShirei agent that provides utility function
 readme = "README.md"
 
 [dependencies]
-log = { version = "0.4.22", optional = true }
-validator = { version = "0.18.1", features = ["derive"], optional = true }
-serde_json = { version = "1.0.128", optional = true }
-bytes = { version = "1.7.2", optional = true }
+log = { version = "0.4.22", optional = true, default-features = false }
+validator = { version = "0.18.1", optional = true, default-features = false, features = ["derive"] }
+serde_json = { version = "1.0.128", optional = true, default-features = false, features = ["alloc"] }
 
 [features]
 default = ["duration-extension", "unrecoverable-error", "unwrap-infallible"]
