--- a/modules/srv-mod-config/Cargo.toml
+++ b/modules/srv-mod-config/Cargo.toml
@@ -14,7 +14,7 @@ log = { version = "0.4.22" }
 tokio = { version = "1.40.0", features = ["full", "tracing", "test-util"] }
 serde = { version = "1.0.210", features = ["derive"] }
 validator = { version = "0.18.1", features = ["derive"] }
-kageshirei-utils = { path = "../../libs/kageshirei-utils", features = ["print-validation-error"] }
+kageshirei-utils = { path = "../../libs/kageshirei-utils" }
 serde_json = "1.0.128"
 nix = { version = "0.29.0", features = ["user"] }
 once_cell = "1.20.2"
