--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ members = [
     "modules/srv-mod-migration",
     "modules/srv-mod-operator-api",
     "modules/srv-mod-terminal-emulator-commands",
-    "server",
+    "server", "libs/kageshirei-format-json",
 ]
 resolver = "2"
 
