--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -29,8 +29,7 @@ mod-win32 = {path = "../modules/mod-win32" }
 mod-nostd = {path = "../modules/mod-nostd"}
 mod-nt-virtualalloc = {path = "../modules/mod-nt-virtualalloc", optional = true }
 mod-nt-heapalloc = {path = "../modules/mod-nt-heapalloc", optional = true }
-mod-protocol-http = {path = "../modules/mod-protocol-http", optional = true}
-mod-protocol-winhttp = {path = "../modules/mod-protocol-winhttp", optional = true}
+mod-protocol-http = {path = "../modules/mod-protocol-http", optional = true, default-features = false}
 mod-std-runtime = {path = "../modules/mod-std-runtime", optional = true}
 mod-nostd-nt-runtime = {path = "../modules/mod-nostd-nt-runtime", optional = true}
 libc-print = "0.1.23"
@@ -42,9 +41,9 @@ chrono = "0.4.38"
 futures = "0.3.31"
 
 [features]
-default = ["protocol-winhttp", "nt-virtualalloc", "nostd-nt-runtime"]
-protocol-json = ["dep:mod-protocol-http"]
-protocol-winhttp = ["dep:mod-protocol-winhttp"]
+default = ["proto-http-winhttp", "nt-virtualalloc", "nostd-nt-runtime"]
+proto-http-std = ["mod-protocol-http/std"]
+proto-http-winhttp = ["mod-protocol-http/winhttp"]
 nt-virtualalloc = ["dep:mod-nt-virtualalloc"]
 nt-heapalloc = ["dep:mod-nt-heapalloc"]
 std-runtime = ["dep:mod-std-runtime"]
