--- a/Cargo.toml
+++ b/Cargo.toml
@@ -533,7 +533,7 @@ type_complexity="warn"
 type_id_on_box="deny"
 type_repetition_in_bounds="deny"
 unconditional_recursion="deny"
-undocumented_unsafe_blocks="warn"
+undocumented_unsafe_blocks="allow"
 unimplemented="deny"
 uninhabited_references="deny"
 uninit_assumed_init="deny"
