The command cargo build --release --bin kageshirei-server works on Windows, but on Linux, you need to manually add the anyhow dependency to the subproject. Additionally, the MSVC toolchain automatically adjusts the visibility of dependencies

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -34,6 +34,7 @@ run_task = { parallel = true, name = [
 
 # Define the tasks responsible for setting up the environment for the build
 [tasks.setup-env.linux]
+rustup target add <missing-target>
 description = "Setup the environment for the build"
 install_script = '''
     rustup target add x86_64-unknown-linux-gnu --force-non-host
