--- a/modules/srv-mod-handler-http/Cargo.toml
+++ b/modules/srv-mod-handler-http/Cargo.toml
@@ -43,6 +43,7 @@ bytes = "1.7.2"
 srv-mod-handler-base = { path = "../srv-mod-handler-base" }
 srv-mod-entity = { path = "../srv-mod-entity" }
 humantime = "2.1.0"
+kageshirei-format-json = { path = "../../libs/kageshirei-format-json" }
 
 [dev-dependencies]
 serde_json = "1.0.128"
