--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,7 +21,7 @@ jobs:
           rustup toolchain install nightly
           rustup default nightly
 
-      - name: Check formatting
+      - name: Check linting
         run: |
           . "$HOME/.cargo/env"
           cargo clippy --workspace --keep-going
