fix: multiple routes handling the same path in axum

--- a/server/sample-config.json
+++ b/server/sample-config.json
@@ -32,7 +32,7 @@
         {
             "enabled":   true,
             "type":      "http",
-            "protocols": [
+            "formats": [
                 "json"
             ],
             "port":      8081,
