fix: rustls required default provider initiation

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -43,6 +43,7 @@ kageshirei-communication-protocol = { path = "../libs/kageshirei-communication-p
 srv-mod-migration = { path = "../modules/srv-mod-migration" }
 srv-mod-entity = { path = "../modules/srv-mod-entity" }
 chrono = "0.4.38"
+rustls = {version = "0.23.19", features = ["aws-lc-rs"]}
 
 [lints]
 workspace = true
