--- a/libs/kageshirei-extensions-macros/Cargo.toml
+++ b/libs/kageshirei-extensions-macros/Cargo.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 proc-macro = true
 
 [dependencies]
-syn = "2.0"
+syn = { version = "2.0", features = ["full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
 
