--- a/modules/srv-mod-config/Cargo.toml
+++ b/modules/srv-mod-config/Cargo.toml
@@ -20,6 +20,7 @@ nix = { version = "0.29.0", features = ["user"] }
 once_cell = "1.20.2"
 regex = "1.11.0"
 winapi = { version = "0.3.9", features = ["processthreadsapi", "securitybaseapi", "winnt", "handleapi", "minwindef"] }
+kageshirei-extensions = { path = "../../libs/kageshirei-extensions" }
 
 [lints]
 workspace = true
