--- a/modules/mod-protocol-http/Cargo.toml
+++ b/modules/mod-protocol-http/Cargo.toml
@@ -31,9 +31,11 @@ mod-agentcore = {path = "../../modules/mod-agentcore", optional = true}
 
 [dev-dependencies]
 tokio = { version = "1.40.0", features = ["full"] }
-axum = { version = "0.7.7" , features = ["macros"]}
-tokio-util = "0.7.12"
 serial_test = "3.1.1"
+hyper = { version = "1", features = ["full"] }
+http-body-util = "0.1"
+hyper-util = { version = "0.1", features = ["full"] }
+bytes = "1.2.3"
 
 [features]
 default = ["winhttp"]
